--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,9 +5,9 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ main, heroku-postgres-db ]
+    branches: [ main, postgres-heroku-db ]
   pull_request:
-    branches: [ main, heroku-postgres-dn ]
+    branches: [ main, postgres-heroku-db  ]
 
 jobs:
   build:
