--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,13 @@
         <!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
 
         <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>1.5.0</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
