--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.main.allow-circular-references=true
 jwt.secret='token-secret'
 spring.jpa.generate-ddl = true
 server.port=8080
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
